--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,4 +28,5 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:recyclerview-v7:+'
     compile files('libs/YouTubeAndroidPlayerApi.jar')
+    compile 'com.squareup.picasso:picasso:2.5.2'
 }
