--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,4 +29,5 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:+'
     compile files('libs/YouTubeAndroidPlayerApi.jar')
     compile 'com.squareup.picasso:picasso:2.5.2'
+    compile 'com.android.support:design:25.0.1'
 }
