--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/Theme.AppCompat.Light.NoActionBar">
         <activity android:name=".activities.HomeActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -16,6 +16,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".activities.SettingsActivity" />
+        <activity android:name=".activities.AlgorithmActivity" />
+        <activity android:name=".activities.ApiActivity"/>
 
     </application>
     <uses-permission android:name="android.permission.INTERNET"/>
